--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "gh-pages": "^4.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "4.0.1"
+        "react-scripts": "4.0.1",
+        "styled-components": "^5.3.5",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
